Fixed the my day button
Now has a brighter color when the task is in My Day (go ahead and change
the color, I spent too much picking this one and still I can clearly see
it sucks).

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   --sidebar-bg-color: #293249;
   --sidebar-bg-color-darker: #1c2333;
   --sidebar-bg-color-darkest: #141924;
+  --sidebar-bg-toggle-color: #0b5394;
   --sidebar-text-color-lightest: #fff;
   --sidebar-text-color-lighter: #e6e6e6;
   --sidebar-text-color: #dcdcdc;
